--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2QjSTf6m23fg9sGHRlSdMw3wQ1+qb4vH8QLjLs/G1ko=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=lin-8263-5355-mysql-primary.servers.linodedb.net
 DB_PORT=3306
-DB_DATABASE=menu_pp
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=menu_app
+DB_USERNAME=linroot
+DB_PASSWORD=ooLIL,Nfn4B7lrtg
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
