--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:2QjSTf6m23fg9sGHRlSdMw3wQ1+qb4vH8QLjLs/G1ko=
+APP_KEY=base64:8qvwzICS8xMm5w2KpKMKBqMLAcuRIcj98pnY0q33TFU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=lin-8263-5355-mysql-primary.servers.linodedb.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=menu_app
-DB_USERNAME=linroot
-DB_PASSWORD=ooLIL,Nfn4B7lrtg
+DB_DATABASE=limomajans
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,7 +29,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
